# runv-pet

./: .gitignore  README.md  gotchi  pyproject.toml
docs/: about.md  install.md
scripts/: flash.sh  install-system.sh  uninstall-system.sh
src/gotchi_app/: __init__.py  cli.py  config.py  filelock.py  identity.py  models.py  runv_mode.py  simulator.py  storage.py  ui.py
tests/: test_simulator.py
